# draft-net

./: README.md  draft_net.tex  draft_net_v2.tex  file-list.txt  pyproject.toml
configs/: base.yaml  painting_spectral.yaml  rsvp_augmented.yaml  tex_revision.yaml  text_bridge.yaml
docs/: draft_trajectory_learning.md  rsvp_integration.md  spectral_refinement.md
draftnet/: __init__.py  types.py
draftnet/cli/: common.py  eval.py  extract.py  replay.py  reverse.py  train.py
draftnet/data/: __init__.py  collate.py  image_loader.py  manifest.py  schema.py  text_loader.py
draftnet/encoders/: __init__.py  base.py  image_encoder.py  rsvp_features.py  text_encoder.py
draftnet/eval/: __init__.py  edit_distance.py  fidelity.py  field_alignment.py  reconstruction.py
draftnet/extract/: __init__.py  diffs.py  git.py  image_progress.py  tex.py
draftnet/losses/: __init__.py  bridge_loss.py  edit_path_loss.py  spectral_loss.py  velocity_loss.py
draftnet/models/: __init__.py  bridge.py  planner.py  segmentation.py  spectral.py  velocity.py
draftnet/trajectories/: draft.py  path_metrics.py  subdivision.py
draftnet/utils/: hashing.py  image_ops.py  io.py  metrics.py
rsvp-writing-suite/: README.md  pyproject.toml
rsvp-writing-suite/agents/: coding_agent_guide.md  screenplay_agent_guide.md
rsvp-writing-suite/examples/: essay_example.md  sample_screenplay.fountain
rsvp-writing-suite/rsvp/: __init__.py  beats.py  document.py  entropy.py  flow.py  metrics.py  parse_cmd.py  parser.py  persona.py  rewrite.py
rsvp-writing-suite/scripts/: char-report  scene-current  scene-next  script-audit
rsvp-writing-suite/spherepop/: events.md  spherepop_operations.md
rsvp-writing-suite/tests/: test_suite.py
rsvp-writing-suite/theory/: lamphron_lamphrodyne.md  narrative_field_model.md  rsvp_foundations.md  scalar_vector_entropy.md
rsvp-writing-suite/vim/ftplugin/: fountain.vim  markdown.vim
rsvp-writing-suite/vim/plugin/: rsvp.vim
scripts/: evaluate_paths.py  extract_git_history.py  extract_painting_progress.py  replay_trajectory.py  reverse_plan.py  train_bridge.py  train_spectral.py
tests/: test_bridge_model.py  test_diff_ops.py  test_image_loader.py  test_image_ops.py  test_path_metrics.py  test_tex_parser.py
